--- a/src/modules/page/PageFooter.module.css
+++ b/src/modules/page/PageFooter.module.css
@@ -1,7 +1,17 @@
 .leftBleed {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 1;
 }
 
 .rightBleed {
-  grid-column: -3 / span 2;
+  grid-column: -2 / span 1;
+}
+
+@media (min-width: 768px) {
+  .leftBleed {
+    grid-column: 1 / span 2;
+  }
+
+  .rightBleed {
+    grid-column: -3 / span 2;
+  }
 }
