--- a/src/screens/home/HomeScreen.module.css
+++ b/src/screens/home/HomeScreen.module.css
@@ -1,15 +1,47 @@
 .leftBleed {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 1;
 }
 
 .rightBleed {
-  grid-column: -3 / span 2;
+  grid-column: -2 / span 1;
 }
 
 .mainColumn {
-  grid-column: 3 / span 7;
+  grid-column: 2 / -2;
 }
 
 .sideColumn {
-  grid-column: -6 / span 3;
+  grid-column: 2 / -2;
+}
+
+@media (min-width: 768px) {
+  .leftBleed {
+    grid-column: 1 / span 2;
+  }
+
+  .rightBleed {
+    grid-column: -3 / span 2;
+  }
+
+  .mainColumn {
+    grid-column: 3 / -3;
+  }
+
+  .sideColumn {
+    grid-column: 3 / -3;
+  }
+}
+
+@media (min-width: 1280px) {
+  .mainColumn {
+    grid-column: 3 / span 7;
+  }
+
+  .sideColumn {
+    grid-column: -6 / span 3;
+  }
+
+  .hideXl {
+    display: none;
+  }
 }
