--- a/src/screens/search/SearchScreen.module.css
+++ b/src/screens/search/SearchScreen.module.css
@@ -3,17 +3,35 @@
 }
 
 .leftBleed {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 1;
 }
 
 .rightBleed {
-  grid-column: -3 / span 2;
+  grid-column: -2 / span 1;
 }
 
 .mainColumn {
-  grid-column: -10 / span 7;
+  grid-column: 2 / -2;
 }
 
 .sideColumn {
-  grid-column: 3 / span 3;
+  grid-column: 2 / -2;
+}
+
+@media (min-width: 768px) {
+  .leftBleed {
+    grid-column: 1 / span 2;
+  }
+
+  .rightBleed {
+    grid-column: -3 / span 2;
+  }
+
+  .mainColumn {
+    grid-column: -10 / span 7;
+  }
+
+  .sideColumn {
+    grid-column: 3 / span 3;
+  }
 }
