--- a/src/screens/contribute/ContributeLayout.module.css
+++ b/src/screens/contribute/ContributeLayout.module.css
@@ -3,18 +3,39 @@
 }
 
 .leftBleed {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 1;
+  display: none;
 }
 
 .rightBleed {
-  grid-column: -3 / span 2;
+  grid-column: -2 / span 1;
 }
 
 .mainColumn {
-  grid-column: -10 / span 7;
-  grid-row: 2 / span 2;
+  grid-column: 2 / -2;
 }
 
 .sideColumn {
-  grid-column: 3 / span 3;
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .leftBleed {
+    grid-column: 1 / span 2;
+    display: block;
+  }
+
+  .rightBleed {
+    grid-column: -3 / span 2;
+  }
+
+  .mainColumn {
+    grid-column: -10 / span 7;
+    grid-row: 2 / span 2;
+  }
+
+  .sideColumn {
+    grid-column: 3 / span 3;
+    display: block;
+  }
 }
