--- a/src/screens/item/ItemLayout.module.css
+++ b/src/screens/item/ItemLayout.module.css
@@ -1,8 +1,18 @@
 .mainColumn {
-  grid-column: 3 / span 7;
+  grid-column: 2 / -2;
 }
 
 .sideColumn {
-  grid-column: -6 / span 3;
-  grid-row: 2 / span 5;
+  grid-column: 2 / -2;
+}
+
+@media (min-width: 768px) {
+  .mainColumn {
+    grid-column: 3 / span 7;
+  }
+
+  .sideColumn {
+    grid-column: -6 / span 3;
+    grid-row: 2 / span 5;
+  }
 }
