--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,21 @@ body {
   font-size: 80%;
 }
 
+.metadata-table th[scope='rowgroup'] {
+  font-weight: 500;
+  padding-block: 8px;
+  border-top: 1px solid;
+  border-color: hsl(0, 0%, 92.5%);
+  background: #fcfcfc;
+}
+
+.metadata-table th[scope='row'] {
+  font-weight: 400;
+  font-style: italic;
+  border-right: 1px solid;
+  border-color: hsl(0, 0%, 92.5%);
+}
+
 .metadata-table td[colspan] {
   text-align: center;
   background: #f5f5f5;
@@ -41,4 +56,5 @@ body {
   border-color: hsl(0, 0%, 92.5%);
   font-size: 12px;
   padding-inline: 4px;
+  vertical-align: middle;
 }
