--- a/src/screens/account/UsersScreen.module.css
+++ b/src/screens/account/UsersScreen.module.css
@@ -7,6 +7,12 @@
 
 @media (min-width: 768px) {
   .content {
+    grid-column: 3 / -3;
+  }
+}
+
+@media (min-width: 1024px) {
+  .content {
     grid-column: 4 / span 8;
   }
 }
