--- a/src/screens/account/VocabulariesScreen.module.css
+++ b/src/screens/account/VocabulariesScreen.module.css
@@ -5,7 +5,13 @@
   grid-column: 2 / -2;
 }
 
-@media (min-width: 786px) {
+@media (min-width: 768px) {
+  .content {
+    grid-column: 3 / -3;
+  }
+}
+
+@media (min-width: 1024px) {
   .content {
     grid-column: 4 / span 8;
   }
