--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -3,11 +3,11 @@
 }
 
 [data-reach-dialog-overlay] {
-  background: hsla(0, 0%, 0%, 0.33);
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   overflow: auto;
+  background: hsl(0deg 0% 0% / 33%);
 }
