--- a/src/styles/nprogress.css
+++ b/src/styles/nprogress.css
@@ -1,6 +1,6 @@
 /** @see https://raw.githubusercontent.com/rstacruz/nprogress/master/nprogress.css */
 :root {
-  --nprogress: #0085ca;
+  --nprogress: hsl(200deg 100% 40%);
 }
 
 #nprogress {
@@ -8,29 +8,29 @@
 }
 
 #nprogress .bar {
-  background: var(--nprogress);
   position: fixed;
-  z-index: 100;
   top: 0;
   left: 0;
+  z-index: 100;
   width: 100%;
   height: 2px;
+  background: var(--nprogress);
 }
 
 #nprogress .peg {
-  display: block;
   position: absolute;
-  right: 0px;
+  right: 0;
+  display: block;
   width: 100px;
   height: 100%;
   box-shadow: 0 0 10px var(--nprogress), 0 0 5px var(--nprogress);
-  opacity: 1;
-  transform: rotate(3deg) translate(0px, -4px);
+  opacity: 100%;
+  transform: rotate(3deg) translate(0, -4px);
 }
 
 .nprogress-custom-parent {
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
 }
 
 .nprogress-custom-parent #nprogress .spinner,
@@ -42,6 +42,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
