--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,26 +34,25 @@ body {
 }
 
 .metadata-table th[scope='rowgroup'] {
-  padding-block: 8px;
-  border-color: hsl(0deg 0% 92.5%);
-  border-top: 1px solid;
+  padding-block: 12px;
+  border-top: 1px solid hsl(0deg 0% 92.5%);
   background: hsl(0deg 0% 99%);
   font-weight: 500;
 }
 
 .metadata-table th[scope='row'] {
-  border-color: hsl(0deg 0% 93%);
-  border-right: 1px solid;
+  padding-block: 8px;
+  border-right: 1px solid hsl(0deg 0% 93%);
   font-weight: 400;
   font-style: italic;
+  line-height: 1.25;
 }
 
 .metadata-table td[colspan] {
   vertical-align: middle;
   padding-inline: 4px;
-  border-color: hsl(0deg 0% 92.5%);
-  border-right: 1px solid;
-  border-left: 1px solid;
+  border-right: 1px solid hsl(0deg 0% 92.5%);
+  border-left: 1px solid hsl(0deg 0% 92.5%);
   background: hsl(0deg 0% 96%);
   font-size: 12px;
   text-align: center;
