--- a/src/components/search/SearchResultsHeader.module.css
+++ b/src/components/search/SearchResultsHeader.module.css
@@ -7,7 +7,7 @@
   padding-block: var(--space-8);
 
   @media (/* --screen-md */ min-width: 48rem) {
-    grid-template-columns: minmax(var(--size-64), auto) 1fr;
+    grid-template-columns: minmax(var(--size-64), auto);
     grid-auto-flow: columns;
     justify-content: space-between;
     padding-block: 0;
