--- a/src/lib/core/page/AccountMenu.module.css
+++ b/src/lib/core/page/AccountMenu.module.css
@@ -7,19 +7,19 @@
   padding: var(--space-2) var(--space-16);
   border: none;
   border-radius: 0 0 var(--border-radius-md) var(--border-radius-md);
-  background-color: var(--color-button-primary-background);
-  color: var(--color-button-primary-text);
+  background-color: var(--color-primary-750);
+  color: var(--color-neutral-50);
   font-size: var(--font-size-ui-sm);
 
-  &:hover {
-    background-color: var(--color-button-primary-background-hover);
+  &[data-hovered] {
+    background-color: var(--color-primary-600);
   }
 
-  &:focus-visible {
-    background-color: var(--color-button-primary-background-focus);
+  &[data-focused] {
+    background-color: var(--color-primary-600);
   }
 
   &[data-state='expanded'] {
-    background-color: var(--color-button-primary-background-hover);
+    background-color: var(--color-primary-600);
   }
 }
