--- a/src/lib/core/ui/CheckBox/CheckBoxBase.module.css
+++ b/src/lib/core/ui/CheckBox/CheckBoxBase.module.css
@@ -3,11 +3,20 @@
   gap: var(--space-2);
   align-items: center;
   padding-block: var(--space-0-5);
+  transition-timing-function: var(--transition-timing-function);
+  transition-duration: var(--transition-duration);
+  transition-property: var(--transition-property);
+
+  &[data-hovered] {
+  }
+
+  &[data-focused] {
+  }
 
   &:disabled,
   &[aria-disabled],
   &[data-state='disabled'] {
-    color: var(--color-formfield-text-disabled);
+    color: var(--color-neutral-400);
     pointer-events: none;
   }
 
@@ -17,8 +26,12 @@
     border-radius: var(--border-radius-md);
   }
 
-  &[data-variant='facet']:hover {
-    background-color: var(--color-formfield-background-hover);
+  &[data-variant='facet'][data-hovered] {
+    background-color: var(--color-neutral-50);
+  }
+
+  &[data-variant='facet'][data-focused] {
+    background-color: var(--color-neutral-50);
   }
 }
 
@@ -30,7 +43,7 @@
   width: var(--size-3-5);
   height: var(--size-3-5);
   padding: var(--space-0-5);
-  border: 1px solid var(--color-formfield-border);
+  border: 1px solid var(--color-neutral-250);
   border-radius: var(--border-radius-md);
   background-color: var(--color-neutral-50);
   color: var(--color-neutral-0);
@@ -55,7 +68,7 @@
   &:disabled,
   &[aria-disabled],
   &[data-state='disabled'] {
-    color: var(--color-formfield-text-disabled);
+    color: var(--color-neutral-400);
     pointer-events: none;
   }
 
