--- a/src/lib/core/ui/Label/Label.module.css
+++ b/src/lib/core/ui/Label/Label.module.css
@@ -2,6 +2,7 @@
   display: inline-flex;
   color: var(--color-neutral-800);
   font-size: var(--font-size-3-5);
+  cursor: default;
   column-gap: var(--space-1);
   transition-timing-function: var(--transition-timing-function);
   transition-duration: var(--transition-duration);
