--- a/src/components/account/ModerateItemSearchFilters.module.css
+++ b/src/components/account/ModerateItemSearchFilters.module.css
@@ -174,3 +174,8 @@
   display: grid;
   gap: var(--space-2);
 }
+
+.search-facets-overlay-controls {
+  margin-top: var(--space-2);
+  font-size: var(--font-size-3-75);
+}
