--- a/src/components/item-form/WorkflowTitle.module.css
+++ b/src/components/item-form/WorkflowTitle.module.css
@@ -1,4 +1,5 @@
 .workflow-title {
+  margin-block-end: var(--space-4);
   color: var(--color-heading);
   font-weight: var(--font-weight-medium);
   font-size: var(--font-size-7);
