--- a/src/components/item/ItemMetadata.module.css
+++ b/src/components/item/ItemMetadata.module.css
@@ -9,6 +9,7 @@
   display: grid;
   row-gap: var(--gap);
   font-size: var(--font-size-ui-base);
+  line-height: var(--size-7);
 
   & > :not(:last-child)::after {
     content: '';
@@ -83,4 +84,10 @@
   &:focus-visible {
     color: var(--color-link-text-hover);
   }
+}
+
+.values {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: var(--space-2-5);
 }
