--- a/src/components/item/ItemMedia.module.css
+++ b/src/components/item/ItemMedia.module.css
@@ -10,6 +10,7 @@
 .media-container {
   position: relative;
   display: grid;
+  gap: var(--space-4);
   height: var(--size-64);
   padding: var(--space-8) var(--space-10);
   place-items: center;
@@ -45,22 +46,19 @@
 
     &[data-direction='next'] {
       border-left: 1px solid var(--color-border);
-
-      & svg {
-        transform: rotate(-90deg);
-      }
     }
 
     &[data-direction='prev'] {
       border-right: 1px solid var(--color-border);
 
       & svg {
-        transform: rotate(90deg);
+        transform: rotate(180deg);
       }
     }
 
     & > .button {
       display: grid;
+      width: 100%;
       padding: 0;
       border: none;
       background: none;
@@ -110,4 +108,11 @@
       }
     }
   }
+}
+
+.caption {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space-2);
+  justify-content: center;
 }
