--- a/src/components/item/ItemMedia.module.css
+++ b/src/components/item/ItemMedia.module.css
@@ -45,22 +45,19 @@
 
     &[data-direction='next'] {
       border-left: 1px solid var(--color-border);
-
-      & svg {
-        transform: rotate(-90deg);
-      }
     }
 
     &[data-direction='prev'] {
       border-right: 1px solid var(--color-border);
 
       & svg {
-        transform: rotate(90deg);
+        transform: rotate(180deg);
       }
     }
 
     & > .button {
       display: grid;
+      width: 100%;
       padding: 0;
       border: none;
       background: none;
