--- a/src/components/item/ItemMedia.module.css
+++ b/src/components/item/ItemMedia.module.css
@@ -14,6 +14,7 @@
   height: var(--size-64);
   padding: var(--space-8) var(--space-10);
   place-items: center;
+  place-content: center;
 
   @media (/* --screen-md */ min-width: 48rem) {
     height: var(--size-96);
@@ -115,4 +116,6 @@
   flex-wrap: wrap;
   gap: var(--space-2);
   justify-content: center;
+  font-size: var(--font-size-3-5);
+  line-height: var(--line-height-tight);
 }
