--- a/src/components/common/Pagination.module.css
+++ b/src/components/common/Pagination.module.css
@@ -27,5 +27,7 @@
     max-width: 3em;
     border: none;
     border-bottom: 1px solid var(--color-text);
+    background-color: transparent;
+    color: var(--color-neutral-800);
   }
 }
