--- a/src/components/item/ItemMedia.module.css
+++ b/src/components/item/ItemMedia.module.css
@@ -10,11 +10,10 @@
 .media-container {
   position: relative;
   display: grid;
+  grid-template-rows: 1fr auto;
   gap: var(--space-4);
   height: var(--size-64);
   padding: var(--space-8) var(--space-10);
-  place-items: center;
-  place-content: center;
 
   @media (/* --screen-md */ min-width: 48rem) {
     height: var(--size-96);
@@ -32,6 +31,11 @@
     min-height: 0;
     max-height: 100%;
   }
+
+  & > :first-child {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .carousel-controls {
@@ -43,13 +47,14 @@
 
   & > li {
     display: grid;
-    justify-items: center;
 
     &[data-direction='next'] {
+      justify-items: center;
       border-left: 1px solid var(--color-border);
     }
 
     &[data-direction='prev'] {
+      justify-items: center;
       border-right: 1px solid var(--color-border);
 
       & svg {
@@ -57,7 +62,7 @@
       }
     }
 
-    & > .button {
+    & > button {
       display: grid;
       width: 100%;
       padding: 0;
@@ -76,6 +81,7 @@
         color: var(--color-link-text-hover);
       }
 
+      /* stylelint-disable-next-line no-descending-specificity */
       & svg {
         width: var(--size-2-5);
         height: var(--size-2-5);
@@ -84,6 +90,7 @@
 
     & .thumbnails {
       display: flex;
+      justify-content: center;
       overflow-x: auto;
       min-height: 0;
       column-gap: var(--space-1);
@@ -96,10 +103,17 @@
 
         & > .button {
           display: grid;
+          width: 100%;
           padding: 0;
           border: none;
           background: none;
+          color: var(--color-link-text);
           place-items: center;
+
+          &:hover {
+            background-color: var(--color-background-muted);
+            color: var(--color-link-text-hover);
+          }
 
           & > * {
             min-height: 0;
