--- a/src/components/auth/SignInForm.module.css
+++ b/src/components/auth/SignInForm.module.css
@@ -33,6 +33,12 @@
     width: 100%;
     height: 100%;
   }
+
+  &:disabled {
+    opacity: 50%;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
 
 .form-fields {
@@ -77,4 +83,17 @@
   margin-block: var(--space-8);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-none);
+}
+
+.disabled-note {
+  display: flex;
+  gap: 0.75rem;
+  color: var(--color-negative-600);
+
+  & > svg {
+    flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-block: 4px;
+  }
 }
