--- a/styles/index.css
+++ b/styles/index.css
@@ -405,4 +405,9 @@
 	body {
 		block-size: 100%;
 	}
+
+	::selection {
+		background-color: var(--color-brand-600);
+		color: var(--color-neutral-0);
+	}
 }
