--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,22 @@
 /* stylelint-disable color-no-hex */
+/* stylelint-disable comment-empty-line-before */
 /* stylelint-disable custom-property-empty-line-before */
 
 @import "tailwindcss";
 
+@plugin "@tailwindcss/typography";
 @plugin "tailwindcss-react-aria-components";
 
-@custom-variant aria-current-page (&[aria-current="page"]);
+/* @custom-variant slot-close (:where(& [data-slot="close"])); */
+@custom-variant slot-control (:where(& [data-slot="control"]));
+@custom-variant slot-description (:where(& [data-slot="description"]));
+@custom-variant slot-error (:where(& [data-slot="error"]));
+@custom-variant slot-field (:where(& [data-slot="field"]));
+@custom-variant slot-fieldset (:where(& [data-slot="fieldset"]));
+@custom-variant slot-icon (:where(& [data-slot="icon"]));
+@custom-variant slot-label (:where(& [data-slot="label"]));
+@custom-variant slot-title (:where(& [data-slot="title"]));
+/* @custom-variant slot-trigger (:where(& [data-slot="trigger"])); */
 
 @theme {
 	--breakpoint-xs: 30rem;
