chore: run stylelint, disable rules

--- a/src/components/common/ItemDescription.module.css
+++ b/src/components/common/ItemDescription.module.css
@@ -5,7 +5,7 @@
   * @see https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-line-clamp
   * @see https://github.com/postcss/autoprefixer/issues/1322
   */
-  display: -webkit-box; /* stylelint-disable-line value-no-vendor-prefix */
+  display: -webkit-box;
   overflow: hidden;
   color: var(--color-text);
   font-size: var(--font-size-ui-base);
