--- a/src/components/item-history/ItemHistoryScreenLayout.module.css
+++ b/src/components/item-history/ItemHistoryScreenLayout.module.css
@@ -12,7 +12,7 @@
     '. header header header header header header header header header header header header .'
     '. content content content content content content content content content content content content .'
     '. funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice .';
-  grid-template-rows: auto fr auto;
+  grid-template-rows: auto 1fr auto;
   grid-template-columns:
     minmax(0, 1fr)
     repeat(var(--column-count), minmax(0, var(--max-column-width)))
