--- a/src/components/item/WorkflowStepsList.module.css
+++ b/src/components/item/WorkflowStepsList.module.css
@@ -79,8 +79,7 @@
 
 .item-index {
   display: grid;
-  align-items: center;
-  justify-items: start;
+  place-items: center start;
   border-right: 1px solid var(--color-neutral-300);
   font-size: var(--font-size-7);
 }
