--- a/src/components/search/ModalDialog.module.css
+++ b/src/components/search/ModalDialog.module.css
@@ -2,8 +2,7 @@
   position: fixed;
   z-index: var(--z-index-dialog);
   display: grid;
-  align-items: start;
-  justify-items: center;
+  place-items: start center;
   background-color: var(--color-backdrop-muted);
   animation: fade-in forwards var(--animation-duration);
   inset: 0;
