--- a/src/components/common/ItemCategoryBadge.module.css
+++ b/src/components/common/ItemCategoryBadge.module.css
@@ -3,6 +3,7 @@
   padding: 0 var(--space-2-5);
   border-radius: 9999px;
   font-size: var(--font-size-ui-xs);
+  line-height: 1.75;
 }
 
 .dataset {
