style: fix header logo size

--- a/src/lib/core/page/PageHeader.module.css
+++ b/src/lib/core/page/PageHeader.module.css
@@ -36,6 +36,10 @@
 	@media (/* --screen-xs */ min-width: 30rem) {
 		margin-inline: var(--space-8);
 	}
+
+	& a {
+		width: 100%;
+	}
 }
 
 .secondary-nav {
