--- a/src/components/home/Hero.module.css
+++ b/src/components/home/Hero.module.css
@@ -14,6 +14,7 @@
 .title {
 	color: var(--color-heading);
 	font-size: var(--font-size-7);
+	font-weight: 700;
 	line-height: var(--line-height-tight);
 }
 
