--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,3 +2,7 @@
 
 @plugin "@tailwindcss/typography";
 @plugin "tailwindcss-react-aria-components";
+
+@theme inline {
+	--font-body: var(--_font-body), var(--font-sans);
+}
