refactor: use react-aria-components for nav

--- a/lib/core/page/AccountMenu.module.css
+++ b/lib/core/page/AccountMenu.module.css
@@ -23,7 +23,8 @@
 		background-color: var(--color-primary-600);
 	}
 
-	&[data-state="expanded"] {
+	&[data-state="expanded"],
+	&[aria-expanded="true"] {
 		background-color: var(--color-primary-600);
 	}
 }
