--- a/lib/core/page/PageHeader.module.css
+++ b/lib/core/page/PageHeader.module.css
@@ -15,11 +15,11 @@
 	border-bottom: 1px solid var(--color-separator-light);
 	column-gap: var(--column-gap);
 
-	@media (/* --screen-xs */ min-width: 30rem) {
+	@media (/* --breakpoint-xs */ min-width: 30rem) {
 		--column-gap: var(--size-8);
 	}
 
-	@media (/* --page-navigation-bar */ min-width: 86.625rem) {
+	@media (/* --breakpoint-xl */ min-width: 80rem) {
 		grid-template-areas:
 			". home-link home-link home-link secondary-nav secondary-nav secondary-nav secondary-nav secondary-nav secondary-nav secondary-nav secondary-nav secondary-nav ."
 			". home-link home-link home-link main-nav main-nav main-nav main-nav main-nav main-nav main-nav main-nav main-nav .";
@@ -33,7 +33,7 @@
 	margin-block: var(--space-4);
 	line-height: var(--line-height-none);
 
-	@media (/* --screen-xs */ min-width: 30rem) {
+	@media (/* --breakpoint-xs */ min-width: 30rem) {
 		margin-inline: var(--space-8);
 	}
 
@@ -46,7 +46,7 @@
 	display: none;
 	grid-area: secondary-nav;
 
-	@media (/* --page-navigation-bar */ min-width: 86.625rem) {
+	@media (/* --breakpoint-xl */ min-width: 80rem) {
 		display: flex;
 		gap: var(--space-8);
 		align-items: center;
