--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,8 +1,95 @@
+/* stylelint-disable custom-property-empty-line-before */
+
 @import "tailwindcss";
 
 @plugin "@tailwindcss/typography";
 @plugin "tailwindcss-react-aria-components";
 
+@theme {
+	--breakpoint-xs: 30rem;
+	--breakpoint-sm: 40rem;
+	--breakpoint-md: 48rem;
+	--breakpoint-lg: 64rem;
+	--breakpoint-xl: 80rem;
+	--breakpoint-2xl: 96rem;
+
+	--text-xs: 0.75rem; /* 12px */
+	--text-sm: 0.875rem; /* 14px */
+	--text-md: 0.9375rem; /* 15px */
+	--text-base: 1rem; /* 16px */
+	--text-lg: 1.0625rem; /* 17px */
+	--text-xl: 1.25rem; /* 20px */
+
+	--color-neutral-0: hsl(0deg 0% 100%); /* #ffffff */
+	--color-neutral-50: hsl(0deg 0% 98%); /* #fafafa */
+	--color-neutral-75: hsl(0deg 0% 96%); /* #f5f5f5 */
+	--color-neutral-100: hsl(0deg 0% 93%); /* #ececec */
+	--color-neutral-150: hsl(0deg 0% 90%); /* #e5e5e5 */
+	--color-neutral-200: hsl(0deg 0% 87%); /* #dddddd */
+	--color-neutral-250: hsl(0deg 0% 85%); /* #d8d8d8 */
+	--color-neutral-300: hsl(0deg 0% 80%); /* #cccccc */
+	--color-neutral-400: hsl(0deg 0% 66%); /* #a8a8a8 */
+	--color-neutral-500: hsl(0deg 0% 54%); /* #898989 */
+	--color-neutral-600: hsl(0deg 0% 46%); /* #767676 */
+	--color-neutral-650: hsl(0deg 0% 46%); /* #656565 */
+	--color-neutral-700: hsl(0deg 0% 35%); /* #585858 */
+	--color-neutral-800: hsl(204deg 4% 23%); /* #373a3c */
+
+	--color-primary-25: hsl(204deg 100% 98%); /* #f5fbff */
+	--color-primary-50: hsl(206deg 91% 95%); /* #e9f5fe */
+	--color-primary-75: hsl(191deg 100% 96%); /* #eafbff */
+	--color-primary-100: hsl(198deg 59% 93%); /* #e4f2f8 */
+	--color-primary-150: hsl(214deg 86% 94%); /* #e4effd */
+	--color-primary-200: hsl(201deg 49% 88%); /* #d0e4ef */
+	--color-primary-300: hsl(213deg 83% 77%); /* #92bff5 */
+	--color-primary-500: hsl(201deg 78% 49%); /* #1b9add */
+	--color-primary-600: hsl(200deg 100% 40%); /* #0085ca */
+	--color-primary-700: hsl(203deg 92% 31%); /* #065f98 */
+	--color-primary-750: hsl(204deg 95% 29%); /* #045a92 */
+	--color-primary-800: hsl(204deg 97% 28%); /* #02558c */
+
+	--color-negative-100: hsl(0deg 100% 96%); /* #ffeaea */
+	--color-negative-200: hsl(0deg 100% 86%); /* #ffb9b9 */
+	--color-negative-500: hsl(4deg 71% 58%); /* #e05248 */
+	--color-negative-600: hsl(4deg 71% 50%); /* #d93025 */
+	--color-negative-750: hsl(4deg 71% 40%); /* #ae271e */
+
+	--color-positive-75: hsl(100deg 100% 96%); /* #f3ffed */
+	--color-positive-100: hsl(105deg 80% 94%); /* #eafce4 */
+	--color-positive-200: hsl(120deg 55% 77%); /* #a6e5a6 */
+	--color-positive-400: hsl(111deg 64% 66%); /* #82e071 */
+	--color-positive-500: hsl(115deg 100% 35%); /* #0eb500 */
+	--color-positive-600: hsl(120deg 47% 43%); /* #3aa23a */
+	--color-positive-650: hsl(120deg 40% 44%); /* #449d44 */
+
+	--color-notice-600: hsl(35deg 100% 55%); /* #ff9e1a */
+
+	--shadow: 0 3px 6px hsl(0deg 0% 0% / 16%);
+
+	--animate-fade-in: 150ms forwards fade-in;
+	--animate-slide-in-from-right: 150ms forwards slide-in-from-right;
+}
+
 @theme inline {
 	--font-body: var(--_font-body), var(--font-sans);
+}
+
+@keyframes fade-in {
+	from {
+		opacity: 0%;
+	}
+
+	to {
+		opacity: 100%;
+	}
+}
+
+@keyframes slide-in-from-right {
+	from {
+		transform: translateX(100%);
+	}
+
+	to {
+		transform: translateX(0);
+	}
 }
